--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-old-c-programmer",
-  "version": "0.1.0",
-  "description": "An opinionated eslint plugin for grumpy old men that grew up on the C programming",
+  "version": "1.0.0",
+  "description": "An opinionated eslint plugin for grumpy old men that grew up on the C programming language",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
