--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "pinst": "^2.0.0",
     "standard-version": "^9.0.0"
   },
+  "peerDependencies": {
+      "eslint": ">=7.13.0"
+  },
   "husky": {
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
